rafactor the discover method of user service
