# libs/common/src/types/types.ts
@@ -1,1 +1,5 @@
 export type FieldToExtractCodes = "Code-1" | "Code-2";
+
+export type CreationResponse = {
+  newId: string;
+};
